[tool.poetry]
name = "rdbms-tools"
version = "0.1.0"
description = "rdbms_tools for testing"
authors = ["Hong <hong@ubuntu-lab-01>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.25"
celery = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
